# chntpw

./: .gitignore  CMakeLists.txt  Makefile  README.md  chntpw.c  chntpw.static  cpnt.c  edlib.c  libsam.c  ntreg.c  ntreg.h  reged.c  reged.static  sam.h  sampasswd.c  sampasswd.static  samusrgrp.c  samusrgrp.static
